--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/3">
-                    <img src="images/profile.png" alt="Kulvardhan Srivastava" class="rounded-full mx-auto shadow-2xl w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-indigo-500 bg-gray-700">
+                    <img src="images/Profile.png" alt="Kulvardhan Srivastava" class="rounded-full mx-auto shadow-2xl w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-indigo-500 bg-gray-700">
                 </div>
                 <div class="md:w-2/3 text-lg text-gray-300 space-y-4 text-center md:text-left">
                     <p>
@@ -178,7 +178,7 @@
                      <!-- Email -->
                     <div class="flex items-center gap-3">
                         <svg class="w-6 h-6 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
-                        <a href="mailto:kulvardhansrivastava7499@gmail.com" class="text-lg font-medium text-indigo-400 hover:text-indigo-500 transition">kulvardhansrivastava7499@gmail.com</a>
+                        <a href="mailto:kulvardhansrivastava7499@gmail.com" class="text-lg font-medium text-indigo-400 hover:text-indigo-500 transition break-all">kulvardhansrivastava7499@gmail.com</a>
                     </div>
                     <!-- Phone -->
                     <div class="flex items-center gap-3">
@@ -244,4 +244,6 @@
 
 </body>
 </html>
+
+
 
